refines issue7 cover spacing

--- a/styles/Issue7.module.css
+++ b/styles/Issue7.module.css
@@ -161,7 +161,7 @@
   row-gap: 3vw;
   justify-content: space-between;
   align-items: flex-end;
-  height:26vh;
+  height:22vh;
 }
 
 .siteShortcuts > .linkButton {
